planner + code orchestration + recommendAgent as answerer